- Renamed productivitytimer.py to timer.py
- Fixed timer app functionality
- Timer app now pauses when cancel prompt open
- Added titles to stopwatch and timer windows
- Added sound effect to timer
8-9-20:
- Fixed typo in check_for_weed easter egg method
- Added sixty_nine_test easter egg method
- Fixed bug where after entering in 420 or 69, then running the timer normally, the the sound upon the timers rundown would be the previously activated easter_egg sound rather than the ding. I did this by creating two new modes called WEED and SIXTY_NINE. I then created a new method to select and load the correct mp3 file based on the mode.
- Made above changes shorter; removed new methods and constants from locals.py
8-10-20:
- Implemented Pomodoro functionality
- Created Pomo settings in settings module
8-11-20:
- Created main menu
- Refactored Timer, Stopwatch, and Pomo -> all classes inherit from Frame instead of Tk in order for the app to easily switch between modes
- Created TimerApp module/class. This is the base of the application
- Created a working back button for all three timers
- Changed how TimerApp shows frames (changed key frames dict to string representation of Frame name instead of frame class as object; now don't have to import modules to use show frames)
8-12-20:
- Renamed settings module to storedsettings
- Created settings module for the settings GUI
- Changed FG and BG color settings in storedsettings to be universal instead of specific to each clock
- Created settings GUI accessed through the main menu
- Created basic FG and BG color changer in settings menu (settings are not saved)
- Settings menu includes an example timer to display how color changes will look
- Changed method names in all three clocks (draw_timer changed to draw_clock; redraw_timer_label changed to redraw_clock_label)
- Set reset methods in all three clocks to simply redraw the clocks
8-13-20:
- Fixed bug where stopwatch wouldn't roll over to an hour properly