@@ -1,0 +1,6 @@
+[DEFAULT]
+default = <Section: DEFAULT>
+
+[SETTINGS]
+clock_fg = #000080
+
